# self-balancing-bot

./: .gitignore  CMakeLists.txt  README.md  monitor.py  ota_flash.py  partitions.csv
main/: CMakeLists.txt
main/include/: robot_control.h  robot_system.h  robot_types.h
main/include/control/: pid_controller.h  state_estimator.h
main/include/hal/: imu_module.h  motor_module.h  ota_module.h  safety_watchdog.h  wifi_module.h
main/include/supervisor/: command_parser.h  parameter_manager.h  telemetry_comms.h  udp_command_receiver.h  udp_logging.h
main/src/: main.c  robot_system.c
main/src/control/: pid_controller.c  state_estimator.c
main/src/hal/: imu_module.c  motor_module.c  ota_module.c  safety_watchdog.c  wifi_module.c
main/src/supervisor/: command_parser.c  parameter_manager.c  telemetry_comms.c  udp_command_receiver.c  udp_logging.c
